--- a/public/practice01.html
+++ b/public/practice01.html
@@ -33,8 +33,8 @@
         { sid: "16", name: "椅拉", parent_sid: "2" },
       ];
 
-      const cate1Val = 2;
-      const cate2Val = 16;
+      const cate1Val = '2';
+      const cate2Val = '16';
 
       // 建立第一層選單 combobox
 
