get checkbox value

--- a/public/practice11.html
+++ b/public/practice11.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <form>
+          <form method="post" action="/try-post">
             <div class="mb-3" id="radioG1">
               <!--
               <label class="form-label">請選擇:</label>
@@ -34,6 +34,9 @@
             -->
 
             </div>
+            <div class="mb-3" id="checkboxG1">
+
+            </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -47,6 +50,7 @@
         JSON.stringify(data1);
       */
       const radioG1 = document.querySelector('#radioG1');
+      const checkboxG1 = document.querySelector('#checkboxG1');
       const data1 = [
         { id: "4", name: "PHP" },
         { id: "5", name: "JavaScript" },
@@ -58,8 +62,8 @@
       ];
 
     //   .map((el)) -> 直接解構 .map(({id, name}))
-      radioG1.innerHTML = 
-        data1.map(({id, name}, i)=>{
+      radioG1.innerHTML = `<label class="form-label">請選擇:</label>` +
+        data1.map(({id, name}, i) => {
           return `
             <div class="form-check">
                 <input
@@ -73,6 +77,19 @@
                   ${name}
                 </label>
               </div>`;
+        }).join('');
+
+        checkboxG1.innerHTML = `<label class="form-label">請選擇(可多選):</label>` +
+        data1.map(({id, name}, i)=>{
+          return `
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" 
+            name="checkboxGroup" value="${id}" id="checkboxG1_${i}">
+            <label class="form-check-label" for="checkboxG1_${i}">
+              ${name}
+            </label>
+          </div>
+            `;
         }).join('');
 
     </script>
