--- a/public/products01.html
+++ b/public/products01.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>商品列表</title>
+    <style>
+      .my-like>.fa-solid {
+        display: none;
+      }
+      .my-like>.fa-regular {
+        display: inline-block;
+      }
+      .my-like.yes>.fa-solid {
+        display: inline-block;
+      }
+      .my-like.yes>.fa-regular {
+        display: none;
+      }
+    </style>
 </head>
 
 <body>
@@ -28,7 +42,7 @@
             <table class="table table-striped">
             <thead>
                 <tr>
-                <th scope="col">#</th>
+                <th scope="col">收藏</th>
                 <th scope="col">書名</th>
                 <th scope="col">作者</th>
                 <th scope="col">價格</th>
@@ -38,6 +52,12 @@
             <tbody>
             ${ar.map(({ sid, bookname, author, price, publish_date}) => (`
                 <tr>
+                    <td>
+                        <div class="my-like" onclick="toggleLike(event)">
+                        <i class="fa-solid fa-heart  text-opacity-75 text-danger"></i>
+                        <i class="fa-regular fa-heart "></i>
+                  </div>
+                    </td>
                     <td>${sid}</td>
                     <td>${bookname}</td>
                     <td>${author}</td>
@@ -64,7 +84,11 @@
         };
         // 第一次直接呼叫
         getData(); 
-        window.addEventListener('popstate',() => getData());
+
+        const toggleLike = (event)=>{
+        const t = event.currentTarget;
+        t.classList.toggle('yes');
+      };
 
     </script>
 </body>
