--- a/public/products01.html
+++ b/public/products01.html
@@ -37,6 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"></script>
     <script>
         let myData;
+        let myLikes;
         const renderTable = (ar) => {
             return `
             <table class="table table-striped">
@@ -53,7 +54,7 @@
             ${ar.map(({ sid, bookname, author, price, publish_date}) => (`
                 <tr>
                     <td>
-                        <div class="my-like" data-sid="${sid}"  onclick="toggleLike(event)">
+                        <div class="my-like" data-sid="${sid}" id="prod${sid}"  onclick="toggleLike(event)">
                         <i class="fa-solid fa-heart  text-opacity-75 text-danger"></i>
                         <i class="fa-regular fa-heart "></i>
                   </div>
@@ -70,41 +71,50 @@
         `};
    
 
-        const getData = () => {
-            fetch('/products')
-                .then(r=>r.json())
-                .then(data=>{
-                    myData = data;
-                    console.log(data);
+        const getData = async () => {
+        const r1 = await fetch("/products");
+        myData = await r1.json();
+        console.log(myData);
+        document.querySelector(".tableContainer").innerHTML =
+          renderTable(myData);
 
-                    document.querySelector('.tableContainer').innerHTML = renderTable(data);
-                    
-                });
+        const r2 = await fetch("/products/likes");
+        myLikes = await r2.json();
+        if (myLikes.logined) {
+          myLikes.likes.forEach(({ product_id }) => {
+            const el = document.querySelector("#prod" + product_id);
+            if (el) {
+              el.classList.add("yes");
+            }
+          });
+        }
+      };
+      getData(); // 第一次進來呼叫
 
-        };
-        // 第一次直接呼叫
-        getData(); 
+      const toggleLike = (event) => {
+        const t = event.currentTarget;
 
-        const toggleLike = (event)=>{
-          const t = event.currentTarget;
-          const pid = t.getAttribute('data-sid');
-          console.log({pid});
+        const pid = t.getAttribute("data-sid");
 
-          fetch(`/products/toggle-like/${pid}`)
-          .then(r => r.json())
-          .then(result => {
-            if(result.success){
-              if(result.action === 'insert'){
-                if(!t.classList.contains('yes')){
-                  t.classList.add('yes');
+        fetch(`/products/toggle-like/${pid}`)
+          .then((r) => r.json())
+          .then((result) => {
+            console.log({ pid, result });
+            if (result.success) {
+              if (result.action === "insert") {
+                if (!t.classList.contains("yes")) {
+                  t.classList.add("yes");
                 }
-              }else{
-                t.classList.remove('yes')
+              } else {
+                if (t.classList.contains("yes")) {
+                  t.classList.remove("yes");
+                }
               }
             }
-          })
-        };
+          });
 
+        // t.classList.toggle('yes');
+      };
     </script>
 </body>
 
